--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "main": "index.js",
   "scripts": {
     "parse-logs": "tsx src/index.ts",
+    "build": "tsc",
+    "start": "pnpm build && node dist/index.js",
     "test": "jest"
   },
   "keywords": [],
@@ -13,6 +15,8 @@
   "devDependencies": {
     "@types/common-tags": "^1.8.4",
     "@types/jest": "^29.5.12",
+    "@types/koa": "^2.14.0",
+    "@types/koa__router": "^12.0.4",
     "@types/node": "^20.11.16",
     "@types/yargs": "^17.0.32",
     "jest": "^29.7.0",
@@ -21,8 +25,11 @@
     "typescript": "^5.3.3"
   },
   "dependencies": {
+    "@koa/router": "^12.0.1",
     "common-tags": "^1.8.2",
     "date-fns": "^3.3.1",
+    "koa": "^2.15.0",
+    "node": "^21.6.2",
     "ramda": "^0.29.1",
     "yargs": "^17.7.2"
   }
